--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -5,7 +5,9 @@ $orangeOnDark: #dc8c01;
 $orange: #cf8300;
 
 $blue: #396abf;
+$blueSky: #74c9e6;
 $green: #00b364;
+$greenDark: #009454;
 $pink: #f281ac;
 $yellow: #efaf4b;
 $yellowLight: #ffe1b2;
