--- a/src/components/VideoModal/styles.module.scss
+++ b/src/components/VideoModal/styles.module.scss
@@ -17,7 +17,7 @@
   transform: translate(-50%, -50%);
   width: 300px;
   height: 380px;
-  box-shadow: 0 1px 40px 0 rgba(50, 47, 68, 0.2);
+  box-shadow: 0 0 0 99999px rgba(0, 0, 0, 0.7);
   padding: 2em 1em;
   display: flex;
   justify-content: center;
