--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -3,6 +3,7 @@ $black: #0d1626;
 $white: #ffffff;
 $orangeOnDark: #dc8c01;
 $orange: #cf8300;
+$orangeLight: #ffb637;
 
 $blue: #396abf;
 $blueSky: #74c9e6;
