--- a/src/components/ConvincedButton/styles.module.scss
+++ b/src/components/ConvincedButton/styles.module.scss
@@ -9,6 +9,8 @@
   margin-top: 30px;
   font-size: 21px;
   text-align: center;
+  padding-left: 0;
+  padding-right: 0;
   @include mq("tablet") {
     padding-top: 18px;
     margin-left: 50px;
