--- a/src/components/Footer/Styles.module.scss
+++ b/src/components/Footer/Styles.module.scss
@@ -220,7 +220,8 @@
   &:last-child {
     margin-bottom: 0;
   }
-  @include mq("tablet") {
+
+  @include mq("desktop") {
     margin: 0 30px 0 0;
     &:last-child {
       margin-right: 0;
