--- a/src/components/ShareSocialCta/Styles.module.scss
+++ b/src/components/ShareSocialCta/Styles.module.scss
@@ -6,8 +6,8 @@
   position: relative;
   background: $greenDark;
   background-image: linear-gradient(270deg, #00b364 0%, #008f50 100%);
-  @include pad-top-standard;
-  @include pad-bot-standard;
+  @include pad-top-large;
+  @include pad-bot-large;
   box-sizing: border-box;
   width: 100%;
   display: flex;
@@ -18,9 +18,10 @@
 .inner {
   justify-content: space-between;
   align-items: center;
+  align-content: center;
   flex-direction: column;
+  text-align: center;
   @include mq("tablet") {
-    flex-direction: row;
   }
 }
 
@@ -28,35 +29,79 @@
   width: 100%;
   margin-bottom: 20px;
   @include mq("tablet") {
-    width: 38%;
+    max-width: 500px;
     margin-bottom: 0;
   }
+}
+
+.icon {
+  align-self: center;
+  margin-bottom: 30px;
+}
+.earthIcon {
+  -webkit-filter: drop-shadow(1px 2px 13px rgba(37, 81, 97, 0.35));
+  filter: drop-shadow(1px 2px 13px rgba(37, 81, 97, 0.358));
+  transform: rotate(20deg);
 }
 
 .title {
   @include font-size($title-xlarge);
   color: $white;
   font-family: $serif;
+  display: inline-flex;
+  flex-direction: column;
+  text-shadow: 1px 5px 20px rgba(37, 81, 97, 0.35);
+}
+
+.titleShare {
+  margin: 0 auto;
+  background-image: url("./underline.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom center;
+  width: auto;
+  @include mq("desktop") {
+    width: 430px;
+  }
+}
+.titleSave {
+  @include font-size($title-small);
+  font-family: $sans;
+  font-weight: bold;
 }
 
 .copy {
   @include font-size($text-small);
   color: $white;
-  margin-bottom: 0;
+  @include mar-bot-small;
+  @include mq("tablet") {
+    @include mar-bot-standard;
+  }
 }
 
 .socialBlock {
+  text-align: center;
   display: block !important;
   border: 1px solid #008f50;
   background-color: $white;
-  box-shadow: 0 1px 13px 0 rgba($black, 0.11);
+
+  box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.22);
   color: $black;
-  width: 90%;
-  padding: 1.25em 5%;
+  width: 100%;
   margin: 0;
   @include mq("tablet") {
-    padding: 2.3em 3%;
-    width: 45%;
+    max-width: 600px;
+    margin-bottom: 0;
+  }
+}
+
+.socialBlockContent {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  @include mq("tablet") {
+    display: inline-block;
+    padding: 40px;
     margin-bottom: 0;
   }
 }
@@ -70,22 +115,45 @@
   color: $grayDark;
   width: 100%;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   @include mq("tablet") {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
 }
 
 .socialContainer {
-  display: flex;
+  display: inline-flex;
+  align-items: center;
   flex-wrap: wrap;
-  margin: 10px 0 0 0;
-  padding: 0;
+  justify-content: space-between;
+  flex-direction: column;
   list-style-type: none;
-  @include mq("desktop") {
+  padding: 0;
+  margin: 0;
+  @include mq("tablet") {
+    flex-direction: row;
   }
 }
 
 .socialButton {
-  margin: 10px 10px 0 0;
+  margin: 10px 0 0 0;
+  &:last-child {
+    margin-right: 0;
+  }
+  @include mq("tablet") {
+    margin: 10px 10px 0 0;
+  }
+}
+
+.thanks {
+  display: block;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+  background: $grayLightest;
+  //border-top: 1px solid $grayBorder;
+  width: 100%;
+  line-height: 55px;
+  height: 55px;
+  margin-top: 10px;
 }
