building static earthy share box

--- a/src/styles/Buttons.module.scss
+++ b/src/styles/Buttons.module.scss
@@ -453,3 +453,9 @@
     height: auto;
   }
 }
+
+.btn-earthy-share {
+  padding: 5px 0 !important;
+  width: 100%;
+  font-size: 13px !important;
+}
