--- a/src/components/EarthyShare/Styles.module.scss
+++ b/src/components/EarthyShare/Styles.module.scss
@@ -6,8 +6,8 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  width: 96px;
-  height: 161px;
+  width: 88px;
+  height: 144px;
   z-index: 9;
 }
 
@@ -15,19 +15,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 70px;
-  height: 72px;
-  padding: 10px;
+  width: 66px;
+  height: 69px;
+  padding: 8px;
   text-align: center;
   background: #16243e;
-  border-radius: 9px;
+  border-radius: 7px;
   box-shadow: 1px 2px 13px 0 rgba(37, 81, 97, 0.35);
 }
 
 .bubbleText {
   color: $white;
   font-size: 13px;
-  line-height: 17px;
+  line-height: 16px;
 }
 
 .bubbleLink {
@@ -36,16 +36,17 @@
 
 .bubbleTick {
   position: absolute;
-  top: 88px;
-  right: 30px;
-  z-index: 3px;
+  top: 80px;
+  right: 19px;
+  z-index: 3;
 }
 
 .icon {
   position: absolute;
   // bottom: 69px;
   right: 0;
-  margin-right: -6px;
+  margin-top: 4px;
+  margin-right: -15px;
 }
 .earthIcon {
   width: 64px;
