adding new share your success story banner

--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -13,7 +13,7 @@ $pink: #f281ac;
 $yellow: #efaf4b;
 $yellowLight: #ffe1b2;
 $cream: #fff4dd;
-$greenLight: #d7f3e7;
+$greenLight: #e5fff3;
 $blueLight: #e9effa;
 
 $whiteFaded: rgba($white, 0.7);
