This commit fixes #105
Changed the social section from a list to CSS grid; evened out the width of all the buttons; evened out the contributor links

--- a/src/components/Footer/Styles.module.scss
+++ b/src/components/Footer/Styles.module.scss
@@ -200,7 +200,7 @@
   margin: 13px auto 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  //align-items: center;
   @include mq("tablet") {
     flex-wrap: wrap;
   }
