--- a/src/components/FooterCta/Styles.module.scss
+++ b/src/components/FooterCta/Styles.module.scss
@@ -50,6 +50,7 @@
 .ctaActions {
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   padding-top: 5px;
   @include mq("tablet") {
     flex-direction: row;
