Fix visual bug with mobile view of nav bar button

--- a/src/styles/Buttons.module.scss
+++ b/src/styles/Buttons.module.scss
@@ -447,9 +447,9 @@
 .btn-header {
   width: 100%;
   background: #1f3357;
-  height: 52px;
+  height: 46px;
   box-sizing: border-box;
-  padding: 15px;
+  padding-top: 15px;
   @include mq("tablet") {
     width: auto;
     height: auto;
