update pressure-power banner, and config

--- a/src/pages/pressure-those-in-power/Styles.module.scss
+++ b/src/pages/pressure-those-in-power/Styles.module.scss
@@ -3,7 +3,7 @@
 @import "../../styles/Typography.module.scss";
 
 .stopsImg {
-  background: url("https://gdb.voanews.com/6b04ee96-c529-40d1-86e3-0432d1a276fa_w800_h450.jpg")
-    no-repeat top center;
+  background: url("../../components/Images/Photos/pressurepower.jpg") no-repeat
+    top center;
   background-size: cover;
 }
